fixed overflow of link buttons on medium sized screens. made them slightly smaller as well

--- a/src/app/components/styles/link-page.module.css
+++ b/src/app/components/styles/link-page.module.css
@@ -1,6 +1,6 @@
 .background {
   background-color: #000;
-  height: 90vh;
+  height: 100vh;
   width: 100vw;
 
   display: flex;
@@ -23,7 +23,7 @@
   background-color: white;
   height: min-content;
 
-  width: clamp(40%, 8em, 90vw);
+  width: clamp(30%, 7em, 90vw);
 
   margin: 2vw;
 
